Fixed some issues with the headline breaking when stretching the display

--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,11 @@ html, body {
     height: 50vh;
   }
 }
+@media (min-width: 1152px) {
+  .headline {
+    font-size: 69px;
+  }
+  .sub-section {
+    font-size: 24px;
+  }
+}
